Height and spacing of create posts input containers fixed

--- a/src/components/_modals/CreatePost/CreatePost.module.css
+++ b/src/components/_modals/CreatePost/CreatePost.module.css
@@ -563,7 +563,7 @@
   }
 
   .profile-switcher-parent {
-    height: 42px !important;
+    height: 48px !important;
     padding: 8px 8px 8px 12px !important;
   }
 
